Do not depend on Guava.
This commit removes all dependencies to Guava from Simplebatch.
It is a breaking change since SimpleBatch was relying heavily on
the functional interfaces provided by Guava. These have been replaced
by Java's default functional interfaces.