@@ -1,4 +1,4 @@
-/**
+/*
  * Copyright 2015 freiheit.com technologies gmbh
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
@@ -16,11 +16,13 @@
  */
 package com.freiheit.fuava.simplebatch.processor;
 
-import java.util.List;
-
 import com.freiheit.fuava.simplebatch.result.Result;
-import com.google.common.collect.FluentIterable;
-import com.google.common.collect.ImmutableList;
+
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.List;
+import java.util.stream.Collectors;
+import java.util.stream.StreamSupport;
 
 final class BatchedSuccessesProcessor<Input, Output, P> implements Processor<Input, Output, BatchProcessorResult<P>> {
     private final Processor<List<Input>, List<Output>, P> delegee;
@@ -31,16 +33,20 @@ final class BatchedSuccessesProcessor<Input, Output, P> implements Processor<Inp
 
     @Override
     public Iterable<Result<Input, BatchProcessorResult<P>>> process( final Iterable<Result<Input, Output>> iterable ) {
-        final List<Result<Input, Output>> success = FluentIterable.from( iterable ).filter( Result::isSuccess ).toList();
-        final List<Result<Input, Output>> fails = FluentIterable.from( iterable ).filter( Result::isFailed ).toList();
+        final List<Result<Input, Output>> success = StreamSupport.stream( iterable.spliterator(), false )
+                .filter( Result::isSuccess )
+                .collect( Collectors.toList() );
+        final List<Result<Input, Output>> fails = StreamSupport.stream( iterable.spliterator(), false )
+                .filter( Result::isFailed )
+                .collect( Collectors.toList() );
 
-        final ImmutableList.Builder<Result<Input, BatchProcessorResult<P>>> resultBuilder = ImmutableList.builder();
+        final List<Result<Input, BatchProcessorResult<P>>> resultBuilder = new ArrayList<>();
         if ( !success.isEmpty() ) {
-            final List<Input> successInputs = FluentIterable.from( success ).transform( Result::getInput ).toList();
-            final List<Output> successOutputs = FluentIterable.from( success ).transform( Result::getOutput ).toList();
+            final List<Input> successInputs = success.stream().map( Result::getInput ).collect( Collectors.toList() );
+            final List<Output> successOutputs = success.stream().map( Result::getOutput ).collect( Collectors.toList() );
 
             final Iterable<Result<List<Input>, P>> batchResults =
-                    this.delegee.process( ImmutableList.of( Result.<List<Input>, List<Output>> success( successInputs,
+                    this.delegee.process( Collections.singletonList( Result.<List<Input>, List<Output>>success( successInputs,
                             successOutputs ) ) );
 
             for ( final Result<List<Input>, P> r : batchResults ) {
@@ -58,7 +64,7 @@ final class BatchedSuccessesProcessor<Input, Output, P> implements Processor<Inp
         for ( final Result<Input, Output> fail : fails ) {
             resultBuilder.add( Result.<Input, BatchProcessorResult<P>> builder( fail ).failed() );
         }
-        return resultBuilder.build();
+        return Collections.unmodifiableList( resultBuilder );
     }
     
     @Override
