@@ -1,4 +1,4 @@
-/**
+/*
  * Copyright 2015 freiheit.com technologies gmbh
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
@@ -16,19 +16,21 @@
  */
 package com.freiheit.fuava.simplebatch.fetch;
 
-import java.io.InputStream;
-import java.util.Map;
-import java.util.concurrent.atomic.AtomicLong;
-
-import org.testng.Assert;
-import org.testng.annotations.Test;
-
 import com.freiheit.fuava.simplebatch.exceptions.FetchFailedException;
 import com.freiheit.fuava.simplebatch.http.HttpFetcher;
 import com.freiheit.fuava.simplebatch.result.Result;
-import com.google.common.base.Function;
-import com.google.common.collect.FluentIterable;
-import com.google.common.collect.ImmutableList;
+import org.testng.Assert;
+import org.testng.annotations.Test;
+
+import java.io.InputStream;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.List;
+import java.util.Map;
+import java.util.concurrent.atomic.AtomicLong;
+import java.util.function.Function;
+import java.util.stream.Collectors;
+import java.util.stream.StreamSupport;
 
 @Test
 public class HttpPagingFetcherTest {
@@ -46,32 +48,29 @@ public class HttpPagingFetcherTest {
     @Test
     public void testFetchLessThanExpected() {
         final DummyHttpFetcher httpFetcher = new DummyHttpFetcher();
-        final ImmutableList<String> fetchedList = ImmutableList.of( "1", "2", "3", "vier" );
+        final List<String> fetchedList = Arrays.asList( "1", "2", "3", "vier" );
         final AtomicLong callCounter = new AtomicLong( 0 );
         final Fetcher<String> fetcher =
-                Fetchers.<String> httpPagingFetcher( httpFetcher,
+                Fetchers.httpPagingFetcher( httpFetcher,
                         ( from, amount ) -> "fetch?from=" + from + "&amount=" + amount,
-                        new Function<InputStream, Iterable<String>>() {
-
-                            @Override
-                            public Iterable<String> apply( final InputStream arg0 ) {
-                                // expected to be called twice
-                                final long c = callCounter.incrementAndGet();
-                                if ( c == 1 ) {
-                                    return fetchedList;
-                                }
-                                Assert.fail( "Should have been called exactly twice" );
-                                return null;
+                        arg0 -> {
+                            // expected to be called twice
+                            final long c = callCounter.incrementAndGet();
+                            if ( c == 1 ) {
+                                return fetchedList;
                             }
-
+                            Assert.fail( "Should have been called exactly twice" );
+                            return null;
                         },
                         0,
                         fetchedList.size() + 1
                         );
 
         final Iterable<Result<FetchedItem<String>, String>> all = fetcher.fetchAll();
-        final ImmutableList<String> result =
-                FluentIterable.from( all ).filter( Result::isSuccess ).transform( Result::getOutput ).toList();
+        final List<String> result = StreamSupport.stream( all.spliterator(), false )
+                .filter( Result::isSuccess )
+                .map( Result::getOutput )
+                .collect( Collectors.toList() );
 
         Assert.assertEquals( result, fetchedList );
         Assert.assertEquals( callCounter.get(), 1, "Expected exactly one call" );
@@ -80,35 +79,32 @@ public class HttpPagingFetcherTest {
     @Test
     public void testFetchOnePageOfPageSize() {
         final DummyHttpFetcher httpFetcher = new DummyHttpFetcher();
-        final ImmutableList<String> fetchedList = ImmutableList.of( "1", "2", "3", "vier" );
+        final List<String> fetchedList = Arrays.asList( "1", "2", "3", "vier" );
         final AtomicLong callCounter = new AtomicLong( 0 );
         final Fetcher<String> fetcher =
-                Fetchers.<String> httpPagingFetcher( httpFetcher,
+                Fetchers.httpPagingFetcher( httpFetcher,
                         ( from, amount ) -> "fetch?from=" + from + "&amount=" + amount,
-                        new Function<InputStream, Iterable<String>>() {
-
-                            @Override
-                            public Iterable<String> apply( final InputStream arg0 ) {
-                                // expected to be called twice
-                                final long c = callCounter.incrementAndGet();
-                                if ( c == 1 ) {
-                                    return fetchedList;
-                                }
-                                if ( c == 2 ) {
-                                    return ImmutableList.of();
-                                }
-                                Assert.fail( "Should have been called exactly twice" );
-                                return null;
+                        arg0 -> {
+                            // expected to be called twice
+                            final long c = callCounter.incrementAndGet();
+                            if ( c == 1 ) {
+                                return fetchedList;
                             }
-
+                            if ( c == 2 ) {
+                                return Collections.emptyList();
+                            }
+                            Assert.fail( "Should have been called exactly twice" );
+                            return null;
                         },
                         0,
                         fetchedList.size()
                         );
 
         final Iterable<Result<FetchedItem<String>, String>> all = fetcher.fetchAll();
-        final ImmutableList<String> result =
-                FluentIterable.from( all ).filter( Result::isSuccess ).transform( Result::getOutput ).toList();
+        final List<String> result = StreamSupport.stream( all.spliterator(), false )
+                .filter( Result::isSuccess )
+                .map( Result::getOutput )
+                .collect( Collectors.toList() );
 
         Assert.assertEquals( result, fetchedList );
         Assert.assertEquals( callCounter.get(), 2, "Expected exactly two calls" );
@@ -117,35 +113,32 @@ public class HttpPagingFetcherTest {
     @Test
     public void testFetchTwoPages() {
         final DummyHttpFetcher httpFetcher = new DummyHttpFetcher();
-        final ImmutableList<String> fetchedList = ImmutableList.of( "1", "2", "3", "vier" );
+        final List<String> fetchedList = Arrays.asList( "1", "2", "3", "vier" );
         final AtomicLong callCounter = new AtomicLong( 0 );
         final Fetcher<String> fetcher =
-                Fetchers.<String> httpPagingFetcher( httpFetcher,
+                Fetchers.httpPagingFetcher( httpFetcher,
                         ( from, amount ) -> "fetch?from=" + from + "&amount=" + amount,
-                        new Function<InputStream, Iterable<String>>() {
-
-                            @Override
-                            public Iterable<String> apply( final InputStream arg0 ) {
-                                // expected to be called twice
-                                final long c = callCounter.incrementAndGet();
-                                if ( c == 1 ) {
-                                    return fetchedList.subList( 0, fetchedList.size() - 1 );
-                                }
-                                if ( c == 2 ) {
-                                    return fetchedList.subList( fetchedList.size() - 1, fetchedList.size() );
-                                }
-                                Assert.fail( "Should have been called exactly twice" );
-                                return null;
+                        arg0 -> {
+                            // expected to be called twice
+                            final long c = callCounter.incrementAndGet();
+                            if ( c == 1 ) {
+                                return fetchedList.subList( 0, fetchedList.size() - 1 );
                             }
-
+                            if ( c == 2 ) {
+                                return fetchedList.subList( fetchedList.size() - 1, fetchedList.size() );
+                            }
+                            Assert.fail( "Should have been called exactly twice" );
+                            return null;
                         },
                         0,
                         fetchedList.size() - 1
                         );
 
         final Iterable<Result<FetchedItem<String>, String>> all = fetcher.fetchAll();
-        final ImmutableList<String> result =
-                FluentIterable.from( all ).filter( Result::isSuccess ).transform( Result::getOutput ).toList();
+        final List<String> result = StreamSupport.stream( all.spliterator(), false )
+                .filter( Result::isSuccess )
+                .map( Result::getOutput )
+                .collect( Collectors.toList() );
 
         Assert.assertEquals( result, fetchedList );
         Assert.assertEquals( callCounter.get(), 2, "Expected exactly two calls" );
